--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/mapbox-gl": "^3.1.0",
+    "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.2.0",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-map-gl": "^7.1.7",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.1/xlsx-0.20.1.tgz"
   },
   "devDependencies": {
